-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
QE 2023-05-15
-
None
-
None
-
None
-
None
-
None
-
None
-
None
after the donor has reached the block timestamp it won't allow any more writes so normal resume tokens from an an actual change event can't be higher than block timestamp, but it can still generate high water mark tokens above the block time stamp. if a write happens on the recipient after the commit it could be skipped if the hwmt is higher than the cluster time of that write on the recipient.
an easy solution is to disable this block https://github.com/mongodb/mongo/blob/983d4ca5e0c50d644c64be42bd59df481dee0a57/src/mongo/db/exec/collection_scan.cpp#L256-L260 to avoid returning tokens higher than the last write. This solution only works for replica sets and we will need to revisit this problem while working on sub-tenant splits and sharding support for serverless
- is related to
-
SERVER-76309 Re-enable support for high water mark tokens in serverless
-
- Closed
-