SERVER-76288 disable high water mark tokens greater than the last operation for a tenant in serverless